@@ -1,5 +1,5 @@
 <config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:Module/etc/module.xsd">
-    <module name="NetworkInternational_NGenius" setup_version="1.0.3" >
+    <module name="NetworkInternational_NGenius" setup_version="1.0.4" >
         <sequence>
             <module name="Magento_Sales" />
             <module name="Magento_Payment" />
